package dte;
syntax = "proto3";

message UserRemove {};

message UserInsert {
  uint32 char = 0;
};

message UserOperation {
  uint32 position = 0;
  oneof operation_type {
    UserRemove remove = 10;
    UserInsert insert = 11;
  };
};